objects/Bhanucust1__c.object
<CustomObject>
    <fields>
        <fullName>BhanuCust2__c</fullName>
        <label>BhanuCust2</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Crx_ClientType_c__c</fullName>
        <label>Crx_ClientType__c</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Crx_GroupName_c__c</fullName>
        <label>Crx_GroupName__c</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Crx_MasterGroupName_c__c</fullName>
        <label>Crx_MasterGroupName__c</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Crx_Test1__c</fullName>
        <label>Crx_Test1</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PickListField__c</fullName>
        <label>FieldName Picklist test the custom filed</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>TestPicklist1</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>TestField__c</fullName>
        <label>TestField</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TestRecPicklist__c</fullName>
        <label>TestRecPicklist</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>custfield1__c</fullName>
        <label>custfield1</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>field3__c</fullName>
        <label>field3</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>Bhanucust1</label>
    <nameField>
        <label>Bhanucust1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bhanucust1s</pluralLabel>
    <recordTypes>
        <fullName>Case</fullName>
        <active>true</active>
        <label>Case</label>
    </recordTypes>
    <recordTypes>
        <fullName>PickListRecordType</fullName>
        <active>true</active>
        <label>PickListRecordType</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>